srcs/Yaml/influxdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb
  labels:
    app: influxdb
spec:
  selector:
    matchLabels:
      app: influxdb
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      containers:
      - name: influxdb
        image: influxdb
        imagePullPolicy: Never
        ports:
        - containerPort: 8086
        readinessProbe:
          tcpSocket:
            port: 8086
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8086
          initialDelaySeconds: 15
          periodSeconds: 20
        volumeMounts:
        - name: influxdb-persistent-storage
          mountPath: /var/lib/influxdb
      volumes:
      - name: influxdb-persistent-storage
        persistentVolumeClaim:
          claimName: influxdb-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  labels:
    app: influxdb
spec:
  type: ClusterIP
  ports:
    - name: influxdb
      port: 8086
  selector:
    app: influxdb
---
